[tool.poetry]
name = "vodscrepe"
version = "1.2.5"
description = "https://vods.co/ vod scraper"
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/vodscrepe"
repository = "https://github.com/dawsonbooth/vodscrepe"
keywords = ["vod", "vods.co", "smash", "melee", "web-scraping", "crepes", "web", "scrape"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
vodscrepe = 'vodscrepe.__main__:main'

[tool.poetry.dependencies]
python = "^3.5"
tqdm = "^4.41.1"
beautifulsoup4 = "^4.8.2"
lxml = "^4.4.2"
requests_futures = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
autopep8 = "^1.5"
pylint = "^2.4.4"
rope = "^0.17.0"
mkdocs = "^1.1.2"
pydoc-markdown = "^3.3.0"
invoke = "^1.4.1"
pyclean = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
