[tool.poetry]
name = "vodscrepe"
version = "2.0.0"
description = "https://vods.co/ vod scraper"
authors = ["Dawson Booth <pypi@dawsonbooth.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dawsonbooth/vodscrepe"
repository = "https://github.com/dawsonbooth/vodscrepe"
documentation = "https://dawsonbooth.github.io/vodscrepe"
keywords = ["vod", "vods.co", "smash", "melee", "web-scraping", "crepes", "web", "scrape"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["LICENSE"]
packages = [{ include = "vodscrepe" }]

[tool.poetry.scripts]
vodscrepe = 'vodscrepe.__main__:main'

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.41.1"
beautifulsoup4 = "^4.8.2"
lxml = "^4.4.2"
requests_futures = "^1.0.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^20.8b1"
dustpan = "^0.3.2"
flake8 = "^3.8.4"
ghp-import = "^1.0.1"
invoke = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.790"
portray = "^1.5.2"
pytest = "^6.2.1"
rope = "^0.18.0"

[tool.black]
line-length = 119

[tool.dustpan]
remove-empty-directories = true

[tool.isort]
line_length = 119
profile = "black"

[tool.portray]
modules = ["vodscrepe"]

[[tool.portray.extra_markdown_extensions]]
[tool.portray.extra_markdown_extensions.toc]
permalink = true

[[tool.portray.extra_markdown_extensions]]
[tool.portray.extra_markdown_extensions."pymdownx.highlight"]
linenums = true

[tool.portray.mkdocs]
site_name = "vodscrepe"
site_url = "https://dawsonbooth.github.io/vodscrepe/"
edit_uri = "blob/master/"

markdown_extensions = [
    "admonition",
    "codehilite",
    "extra",
    "pymdownx.details",
    "pymdownx.superfences",
]

nav = [{ Overview = "README.md" }]

[tool.portray.mkdocs.theme]
name = "material"
palette = { primary = "blue grey", accent = "red" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
